--- a/movieServer/views/header.ejs
+++ b/movieServer/views/header.ejs
@@ -13,5 +13,6 @@
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
   crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="../public/stylesheets/mainstlye.css" />
+  <link rel="stylesheet" href="/stylesheets/mainstlye.css" />
+
   <!-- END SHARED -->
