--- a/movieServer/views/shared-header.ejs
+++ b/movieServer/views/shared-header.ejs
@@ -2,10 +2,9 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-        <%- title %>
-    </title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title><%- title %></title>
 
-    <link rel="stylesheet" href="../stylesheets/mainstlye.css" />
+  <link rel="stylesheet" href="/stylesheets/mainstlye.css" />
+  <!-- END SHARED -->
