--- a/movieServer/public/stylesheets/ActorsStyle.css
+++ b/movieServer/public/stylesheets/ActorsStyle.css
@@ -4,6 +4,15 @@
 #AEBD38 moss
 #598234 meadow
 */
+body {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.mainheading {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--meadow);
+}
 
 img {
   max-width: 100%;
@@ -22,16 +31,26 @@ article ul li {
   font-size: 1.2em;
 }
 
-.mainactorcontent{
-  margin-top: .5rem;
+.mainactorcontent {
+  margin-top: 0.5rem;
 }
 
-h2{
+h2 {
   font-size: x-large;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 p {
   font-size: 1.1em;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.actorlist {
+  list-style-image: url("star.gif");
+}
+
+.movielist {
+  list-style-image: url("clapperboard.gif");
 }
 
 @media (max-width: 300px) {
