--- a/movieServer/views/actor.ejs
+++ b/movieServer/views/actor.ejs
@@ -1,7 +1,8 @@
-<%- include("header.ejs", {title: name}) %> 
-
-    <link rel="stylesheet" href="/stylesheets/ActorsStyle.css" />
-
+<%- include("shared-single-header.ejs", {title: name}) %> 
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../../stylesheets/mainstlye.css" />
+    <link rel="stylesheet" href="../../stylesheets/ActorsStyle.css" />
 </head>
     
 <body>
@@ -35,16 +36,16 @@
             </p>
             <!-- Going to implement image -->
             <p>Born:
-                <%- born %>
+                <%- bornDate %>
             </p>
             <p>Height:
                 <%- height %> ft
             </p>
             <p>Twitter account:
-                <a title="Twitter account" href=<%= twitter %>> <%- twitter %></a>
+                <a title="Twitter account" href=<%= twitterAccount %>> <%- twitterAccount %></a>
             </p>
             <p>Movies starred in: </p>
-            <ul>
+            <ul class="movielist">
                 <% for (let m of movies) { %>
                     <li>
                         <a href="<%- m.url %> "><%- m.title %></a>
@@ -52,6 +53,14 @@
                     <% } %>
             </ul>
         </ul>
+
+        <hr>
+    
+        <ul class="list-unstyled">
+          <li><a href="/actors/update/<%- _id %>">Update current student</a></li>
+          <li><a href="/actors/delete/<%- _id %>">Delete student from database</a></li>
+        </ul>
+
     </div>
 
     <footer>
