--- a/movieServer/views/actorList.ejs
+++ b/movieServer/views/actorList.ejs
@@ -1,7 +1,8 @@
 <%- include("shared-header.ejs", {title: "List of actors"}) %> 
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../stylesheets/ActorsStyle.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+<link rel="stylesheet" href="../../stylesheets/mainstlye.css" />
+<link rel="stylesheet" href="../../stylesheets/ActorsStyle.css" />
 </head>
     
 
@@ -32,14 +33,13 @@
     <div class="maincontent">
       <h2>List of Actors in database</h2>
 
-      <ul>
+      <ul class="actorlist">
         <% for (let a of actorList) { %>
           <li><a href="<%- a.url %>"><%- a.name %></a></li>
         <% } %>
         </ul>
 
-        <a href="/create/">Create a new actor</a>
-
+        <p><a href="/actors/create">Create new actor</a></p>
     </div>
 
     <footer>
