--- a/movieServer/views/userMulti.ejs
+++ b/movieServer/views/userMulti.ejs
@@ -50,6 +50,11 @@
                     </a>
                     <ul>
                         <li>
+                            <a href="./users/addProfilePic/<%-userList[i]._id%>">
+                                Add a profile picture
+                            </a>
+                        </li>
+                        <li>
                             <a href="./users/update/<%-userList[i]._id%>">
                             Update <%-userList[i].userName%>
                              </a>
@@ -62,14 +67,8 @@
                 <%}%>
         </ul>
     </div>
-    <footer style="margin-top: 5%">
-        <div>
-            <span style="font-size: 1.5em">Page by JMM</span>
-            <p>
-                © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
-            </p>
-        </div>
-    </footer>
+    <%- include("common-footer.ejs") %>
+
 </body>
 
 </html>
