--- a/movieServer/public/stylesheets/ActorsStyle.css
+++ b/movieServer/public/stylesheets/ActorsStyle.css
@@ -14,6 +14,14 @@ body {
   background-color: var(--meadow);
 }
 
+.formHeader{
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 0.2em;
+    background: white;
+    max-width: 60em;
+}
+
 img {
   max-width: 100%;
   height: auto;
